# imacrun3D

./: CMakeLists.txt  readme.md
assets/maps/: map1.imac  map2.imac  map3.imac
assets/models/coin/: asteroid.mtl  asteroid_2.mtl  coin.mtl
assets/models/enemy/: StarSparrow2.mtl
assets/models/player/: StarSparrow.mtl
assets/models/wall/: asteroide.mtl  asteroide2.mtl  asteroideArch.mtl
assets/shaders/: Model.fs.glsl  Model.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  tex2D.fs.glsl  tex2D.vs.glsl  tex3D.fs.glsl
glimac/include/glimac/: Event.hpp  FreeflyCamera.hpp  Hole.hpp  Map.hpp  Player.hpp  Surcouche.hpp  Texture.hpp  Tile.hpp  TrackballCamera.hpp
glimac/src/: Event.cpp  FreeflyCamera.cpp  Hole.cpp  Map.cpp  Player.cpp  Surcouche.cpp  Texture.cpp  Tile.cpp  TrackballCamera.cpp
src/: Arc.cpp  Arc.hpp  Arch.cpp  Arch.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraFirstPerson.cpp  CameraFirstPerson.hpp  CameraManager.cpp  CameraManager.hpp  CameraThirdPerson.cpp  CameraThirdPerson.hpp  Coin.cpp  Coin.hpp  Enemy.cpp  Enemy.hpp  Event.cpp  Event.hpp  Game.cpp  Game.hpp  GameRendering.cpp  GameRendering.hpp  Hole.cpp  Hole.hpp  IBO.hpp  ICamera.hpp  Map.cpp  Map.hpp  Menu.cpp  Menu.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Player.cpp  Player.hpp  PlayerTest.cpp  PlayerTest.hpp  SDLtemplate.cpp  (+22 more)
src/maps/: map1.imac
src/shaders/: 3D.vs.glsl  tex3D.fs.glsl
